added cleaned data

--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -92,65 +92,57 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Selection of Variables"
+        "### Selection of Variables and Dropping NA's"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "                                                                                \r"
-          ]
-        },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Rows before: 72498 | Rows after NA drop: 2243\n",
-            "[OK] Data cleaned and numeric columns casted.\n",
-            "+--------+--------------------+--------------------+--------+-----------+--------------------+---------------------+\n",
-            "|  SALARY|MIN_YEARS_EXPERIENCE|MAX_YEARS_EXPERIENCE|DURATION|SALARY_FROM|EMPLOYMENT_TYPE_NAME|EDUCATION_LEVELS_NAME|\n",
-            "+--------+--------------------+--------------------+--------+-----------+--------------------+---------------------+\n",
-            "|131100.0|                 2.0|                 2.0|    11.0|   113400.0|Full-time (> 32 h...|    Bachelor's degree|\n",
-            "|136950.0|                 3.0|                 3.0|    28.0|   115300.0|Full-time (> 32 h...| Bachelor's degree...|\n",
-            "|136950.0|                 3.0|                 3.0|    28.0|   115300.0|Full-time (> 32 h...| Bachelor's degree...|\n",
-            "|104000.0|                 3.0|                 3.0|     8.0|   104000.0|Full-time (> 32 h...|    Bachelor's degree|\n",
-            "| 80000.0|                 3.0|                 3.0|    37.0|    60000.0|Full-time (> 32 h...|    Bachelor's degree|\n",
-            "+--------+--------------------+--------------------+--------+-----------+--------------------+---------------------+\n",
+            " Data cleaned and numeric columns casted \n",
+            "+--------------------+--------------------+--------+-----------+--------------------+---------------------+--------+\n",
+            "|MIN_YEARS_EXPERIENCE|MAX_YEARS_EXPERIENCE|DURATION|SALARY_FROM|EMPLOYMENT_TYPE_NAME|EDUCATION_LEVELS_NAME|  SALARY|\n",
+            "+--------------------+--------------------+--------+-----------+--------------------+---------------------+--------+\n",
+            "|                 2.0|                 2.0|    11.0|   113400.0|Full-time (> 32 h...|    Bachelor's degree|131100.0|\n",
+            "|                 3.0|                 3.0|    28.0|   115300.0|Full-time (> 32 h...| Bachelor's degree...|136950.0|\n",
+            "|                 3.0|                 3.0|    28.0|   115300.0|Full-time (> 32 h...| Bachelor's degree...|136950.0|\n",
+            "|                 3.0|                 3.0|     8.0|   104000.0|Full-time (> 32 h...|    Bachelor's degree|104000.0|\n",
+            "|                 3.0|                 3.0|    37.0|    60000.0|Full-time (> 32 h...|    Bachelor's degree| 80000.0|\n",
+            "+--------------------+--------------------+--------+-----------+--------------------+---------------------+--------+\n",
             "only showing top 5 rows\n",
             "\n"
           ]
         }
       ],
       "source": [
+        "\n",
+        "# Variable Selection\n",
         "min_years = \"MIN_YEARS_EXPERIENCE\"\n",
         "cont_cols = [\"MAX_YEARS_EXPERIENCE\", \"DURATION\", \"SALARY_FROM\"]\n",
         "cat_cols = [\"EMPLOYMENT_TYPE_NAME\", \"EDUCATION_LEVELS_NAME\"]\n",
         "y_col = \"SALARY\"\n",
         "\n",
-        "required_cols = [y_col, min_years] + cont_cols + cat_cols\n",
+        "# Dropping NA's\n",
+        "required_cols = [min_years] + cont_cols + cat_cols + [y_col]\n",
         "df_clean = df.dropna(subset=required_cols).select(required_cols)\n",
         "\n",
-        "\n",
-        "print(\"Rows before:\", df.count(), \"| Rows after NA drop:\", df_clean.count())\n",
-        "\n",
-        "# --- Clean EDUCATION_LEVELS_NAME ---\n",
+        "# Clean EDUCATION_LEVELS_NAME\n",
         "df_clean = df_clean.withColumn(\n",
         "    \"EDUCATION_LEVELS_NAME\",\n",
         "    trim(regexp_replace(col(\"EDUCATION_LEVELS_NAME\"), r\"[\\[\\]\\n\\\"]\", \"\"))\n",
         ")\n",
         "\n",
-        "# --- Cast numeric columns to double ---\n",
+        " #  Cast numeric columns to double \n",
         "for c in [y_col, min_years] + cont_cols:\n",
         "    df_clean = df_clean.withColumn(c, col(c).cast(\"double\"))\n",
         "\n",
-        "# --- Final Check ---\n",
-        "print(\"[OK] Data cleaned and numeric columns casted.\")\n",
+        "# Data Cleaned\n",
+        "print(\" Data cleaned and numeric columns casted \")\n",
         "df_clean.show(5)\n"
       ]
     }
