added AI Prompt

--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -92,7 +92,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Selection of Variables and Dropping NA's"
+        "### Selection of Variables and Dropping NA's\n",
+        "* I referred to Claude to decide which cast (Float, Double, or Integer) should be used for numeric columns."
       ]
     },
     {
