modified the code

--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -36,14 +36,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "                                                                                \r"
+            "/home/ubuntu/assignment-04-BhargaviManyala/.venv/lib/python3.12/site-packages/kaleido/__init__.py:14: UserWarning:\n",
+            "\n",
+            "\n",
+            "\n",
+            "Warning: You have Plotly version 6.0.0, which is not compatible with this version of Kaleido (1.0.0).\n",
+            "\n",
+            "This means that static image generation (e.g. `fig.write_image()`) will not work.\n",
+            "\n",
+            "Please upgrade Plotly to version 6.1.1 or greater, or downgrade Kaleido to version 0.2.1.\n",
+            "\n",
+            "\n",
+            "Setting default log level to \"WARN\".\n",
+            "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+            "25/09/29 19:47:38 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+            "25/09/29 19:47:58 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
           ]
         }
       ],
@@ -98,25 +112,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            " Data cleaned and numeric columns casted \n",
-            "+--------------------+--------------------+--------+-----------+--------------------+---------------------+--------+\n",
-            "|MIN_YEARS_EXPERIENCE|MAX_YEARS_EXPERIENCE|DURATION|SALARY_FROM|EMPLOYMENT_TYPE_NAME|EDUCATION_LEVELS_NAME|  SALARY|\n",
-            "+--------------------+--------------------+--------+-----------+--------------------+---------------------+--------+\n",
-            "|                 2.0|                 2.0|    11.0|   113400.0|Full-time (> 32 h...|    Bachelor's degree|131100.0|\n",
-            "|                 3.0|                 3.0|    28.0|   115300.0|Full-time (> 32 h...| Bachelor's degree...|136950.0|\n",
-            "|                 3.0|                 3.0|    28.0|   115300.0|Full-time (> 32 h...| Bachelor's degree...|136950.0|\n",
-            "|                 3.0|                 3.0|     8.0|   104000.0|Full-time (> 32 h...|    Bachelor's degree|104000.0|\n",
-            "|                 3.0|                 3.0|    37.0|    60000.0|Full-time (> 32 h...|    Bachelor's degree| 80000.0|\n",
-            "+--------------------+--------------------+--------+-----------+--------------------+---------------------+--------+\n",
-            "only showing top 5 rows\n",
-            "\n"
+            " Data cleaned and numeric columns casted \n"
           ]
         }
       ],
@@ -130,7 +133,7 @@
         "\n",
         "# Dropping NA's\n",
         "required_cols = [min_years] + cont_cols + cat_cols + [y_col]\n",
-        "df_clean = df.dropna(subset=required_cols).select(required_cols)\n",
+        "df_clean = df.dropna(subset=required_cols)\n",
         "\n",
         "# Clean EDUCATION_LEVELS_NAME\n",
         "df_clean = df_clean.withColumn(\n",
@@ -144,7 +147,8 @@
         "\n",
         "# Data Cleaned\n",
         "print(\" Data cleaned and numeric columns casted \")\n",
-        "df_clean.show(5)\n"
+        "\n",
+        "\n"
       ]
     }
   ],
