--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -36,28 +36,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/home/ubuntu/assignment-04-BhargaviManyala/.venv/lib/python3.12/site-packages/kaleido/__init__.py:14: UserWarning:\n",
-            "\n",
-            "\n",
-            "\n",
-            "Warning: You have Plotly version 6.0.0, which is not compatible with this version of Kaleido (1.0.0).\n",
-            "\n",
-            "This means that static image generation (e.g. `fig.write_image()`) will not work.\n",
-            "\n",
-            "Please upgrade Plotly to version 6.1.1 or greater, or downgrade Kaleido to version 0.2.1.\n",
-            "\n",
-            "\n",
-            "Setting default log level to \"WARN\".\n",
-            "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-            "25/09/29 19:47:38 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-            "25/09/29 19:47:58 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
+            "                                                                                \r"
           ]
         }
       ],
@@ -70,7 +56,7 @@
         "from pyspark.sql.functions import col, pow\n",
         "from pyspark.ml.feature import StringIndexer, OneHotEncoder, VectorAssembler\n",
         "from pyspark.ml import Pipeline\n",
-        "from pyspark.sql.functions import col, regexp_replace, trim\n",
+        "from pyspark.sql.functions import col, when, expr, trim, regexp_replace\n",
         "\n",
         "\n",
         "np.random.seed(42)\n",
@@ -112,41 +98,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "✅ DataFrame has 2325 rows and 131 columns after cleaning\n",
             " Data cleaned and numeric columns casted \n"
           ]
         }
       ],
       "source": [
         "\n",
-        "# Variable Selection\n",
-        "min_years = \"MIN_YEARS_EXPERIENCE\"\n",
-        "cont_cols = [\"MAX_YEARS_EXPERIENCE\", \"DURATION\", \"SALARY_FROM\"]\n",
-        "cat_cols = [\"EMPLOYMENT_TYPE_NAME\", \"EDUCATION_LEVELS_NAME\"]\n",
-        "y_col = \"SALARY\"\n",
-        "\n",
-        "# Dropping NA's\n",
-        "required_cols = [min_years] + cont_cols + cat_cols + [y_col]\n",
-        "df_clean = df.dropna(subset=required_cols)\n",
-        "\n",
-        "# Clean EDUCATION_LEVELS_NAME\n",
-        "df_clean = df_clean.withColumn(\n",
-        "    \"EDUCATION_LEVELS_NAME\",\n",
-        "    trim(regexp_replace(col(\"EDUCATION_LEVELS_NAME\"), r\"[\\[\\]\\n\\\"]\", \"\"))\n",
-        ")\n",
-        "\n",
-        " #  Cast numeric columns to double \n",
-        "for c in [y_col, min_years] + cont_cols:\n",
-        "    df_clean = df_clean.withColumn(c, col(c).cast(\"double\"))\n",
-        "\n",
-        "# Data Cleaned\n",
-        "print(\" Data cleaned and numeric columns casted \")\n",
         "\n",
         "\n"
       ]
