changed remote type name

--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -36,28 +36,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/home/ubuntu/assignment-04-BhargaviManyala/.venv/lib/python3.12/site-packages/kaleido/__init__.py:14: UserWarning:\n",
-            "\n",
-            "\n",
-            "\n",
-            "Warning: You have Plotly version 6.0.0, which is not compatible with this version of Kaleido (1.0.0).\n",
-            "\n",
-            "This means that static image generation (e.g. `fig.write_image()`) will not work.\n",
-            "\n",
-            "Please upgrade Plotly to version 6.1.1 or greater, or downgrade Kaleido to version 0.2.1.\n",
-            "\n",
-            "\n",
-            "Setting default log level to \"WARN\".\n",
-            "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-            "25/10/01 21:44:27 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-            "25/10/01 21:44:43 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
+            "                                                                                \r"
           ]
         }
       ],
@@ -113,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [
         {
@@ -246,6 +232,240 @@
         "plt.ylabel(\"Missing Values\")\n",
         "plt.title(\"Missing Values per Column (Sorted)\")\n",
         "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Define categorical columns to analyze\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "---- STATE_NAME ----\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "+-------------+\n",
+            "|STATE_NAME   |\n",
+            "+-------------+\n",
+            "|Utah         |\n",
+            "|Hawaii       |\n",
+            "|Minnesota    |\n",
+            "|Ohio         |\n",
+            "|Arkansas     |\n",
+            "|Oregon       |\n",
+            "|Texas        |\n",
+            "|North Dakota |\n",
+            "|Pennsylvania |\n",
+            "|Connecticut  |\n",
+            "|Nebraska     |\n",
+            "|Vermont      |\n",
+            "|Nevada       |\n",
+            "|Washington   |\n",
+            "|Illinois     |\n",
+            "|Oklahoma     |\n",
+            "|Delaware     |\n",
+            "|Alaska       |\n",
+            "|New Mexico   |\n",
+            "|West Virginia|\n",
+            "+-------------+\n",
+            "only showing top 20 rows\n",
+            "\n",
+            "\n",
+            "---- REMOTE_TYPE_NAME ----\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "+----------------+\n",
+            "|REMOTE_TYPE_NAME|\n",
+            "+----------------+\n",
+            "|Remote          |\n",
+            "|On Premise      |\n",
+            "|Hybrid          |\n",
+            "|Undefined       |\n",
+            "+----------------+\n",
+            "\n",
+            "\n",
+            "---- EMPLOYMENT_TYPE_NAME ----\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "+------------------------+\n",
+            "|EMPLOYMENT_TYPE_NAME    |\n",
+            "+------------------------+\n",
+            "|Part-time / full-time   |\n",
+            "|Part-time (â‰¤ 32 hours)|\n",
+            "|Full-time (> 32 hours)  |\n",
+            "|NULL                    |\n",
+            "+------------------------+\n",
+            "\n",
+            "\n",
+            "---- MIN_EDULEVELS_NAME ----\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "+----------------------------+\n",
+            "|MIN_EDULEVELS_NAME          |\n",
+            "+----------------------------+\n",
+            "|Bachelor's degree           |\n",
+            "|Ph.D. or professional degree|\n",
+            "|High school or GED          |\n",
+            "|Master's degree             |\n",
+            "|No Education Listed         |\n",
+            "|Associate degree            |\n",
+            "|NULL                        |\n",
+            "+----------------------------+\n",
+            "\n",
+            "\n",
+            "---- COMPANY_IS_STAFFING ----\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "+-------------------+\n",
+            "|COMPANY_IS_STAFFING|\n",
+            "+-------------------+\n",
+            "|true               |\n",
+            "|false              |\n",
+            "|NULL               |\n",
+            "+-------------------+\n",
+            "\n",
+            "\n",
+            "---- IS_INTERNSHIP ----\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[Stage 352:>                                                        (0 + 1) / 1]\r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "+-------------+\n",
+            "|IS_INTERNSHIP|\n",
+            "+-------------+\n",
+            "|true         |\n",
+            "|false        |\n",
+            "|NULL         |\n",
+            "+-------------+\n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        }
+      ],
+      "source": [
+        "\n",
+        "# Change Remote Type Name\n",
+        "subset_final_df = subset_final_df.withColumn(\n",
+        "    \"REMOTE_TYPE_NAME\",\n",
+        "    when(col(\"REMOTE_TYPE_NAME\") == \"Remote\", \"Remote\")\n",
+        "    .when(col(\"REMOTE_TYPE_NAME\") == \"[None]\", \"Undefined\")\n",
+        "    .when(col(\"REMOTE_TYPE_NAME\") == \"Not Remote\", \"On Premise\")\n",
+        "    .when(col(\"REMOTE_TYPE_NAME\") == \"Hybrid Remote\", \"Hybrid\")\n",
+        "    .when(col(\"REMOTE_TYPE_NAME\").isNull(), \"On Premise\")\n",
+        "    .otherwise(col(\"REMOTE_TYPE_NAME\"))\n",
+        ")\n",
+        "\n",
+        "subset_final_df.createOrReplaceTempView(\"subset_final_df\")\n",
+        "\n",
+        "categorical_cols = [\n",
+        "    \"STATE_NAME\", \"REMOTE_TYPE_NAME\", \"EMPLOYMENT_TYPE_NAME\",\n",
+        "    \"MIN_EDULEVELS_NAME\", \"COMPANY_IS_STAFFING\", \"IS_INTERNSHIP\"\n",
+        "]\n",
+        "\n",
+        "for colname in categorical_cols:\n",
+        "    print(f\"\\n---- {colname} ----\")\n",
+        "    subset_final_df.select(colname).distinct().show(truncate=False)\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 37,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "subset_final_df = subset_final_df.withColumn(\n",
+        "    \"REMOTE_TYPE_NAME\",\n",
+        "    when(col(\"REMOTE_TYPE_NAME\") == \"Remote\", \"Remote\")\n",
+        "    .when(col(\"REMOTE_TYPE_NAME\") == \"[None]\", \"Undefined\")\n",
+        "    .when(col(\"REMOTE_TYPE_NAME\") == \"Not Remote\", \"On Premise\")\n",
+        "    .when(col(\"REMOTE_TYPE_NAME\") == \"Hybrid Remote\", \"Hybrid\")\n",
+        "    .when(col(\"REMOTE_TYPE_NAME\").isNull(), \"On Premise\")\n",
+        "    .otherwise(col(\"REMOTE_TYPE_NAME\"))\n",
+        ")\n",
+        "\n",
+        "subset_final_df.createOrReplaceTempView(\"subset_final_df\")\n",
+        "\n"
       ]
     }
   ],
