changed employment type

--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 53,
       "metadata": {},
       "outputs": [
         {
@@ -99,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 54,
       "metadata": {},
       "outputs": [
         {
@@ -330,14 +330,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "+------------------------+\n",
-            "|EMPLOYMENT_TYPE_NAME    |\n",
-            "+------------------------+\n",
-            "|Part-time / full-time   |\n",
-            "|Part-time (â‰¤ 32 hours)|\n",
-            "|Full-time (> 32 hours)  |\n",
-            "|NULL                    |\n",
-            "+------------------------+\n",
+            "+--------------------+\n",
+            "|EMPLOYMENT_TYPE_NAME|\n",
+            "+--------------------+\n",
+            "|Part-time           |\n",
+            "|Flexible            |\n",
+            "|Full-time           |\n",
+            "+--------------------+\n",
             "\n",
             "\n",
             "---- MIN_EDULEVELS_NAME ----\n"
@@ -397,7 +396,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[Stage 352:>                                                        (0 + 1) / 1]\r"
+            "[Stage 502:>                                                        (0 + 1) / 1]\r"
           ]
         },
         {
@@ -425,6 +424,7 @@
       "source": [
         "\n",
         "# Change Remote Type Name\n",
+        "\n",
         "subset_final_df = subset_final_df.withColumn(\n",
         "    \"REMOTE_TYPE_NAME\",\n",
         "    when(col(\"REMOTE_TYPE_NAME\") == \"Remote\", \"Remote\")\n",
@@ -435,6 +435,16 @@
         "    .otherwise(col(\"REMOTE_TYPE_NAME\"))\n",
         ")\n",
         "\n",
+        "# Change Employment Type Name\n",
+        "\n",
+        "subset_final_df = subset_final_df.withColumn(\n",
+        "    \"EMPLOYMENT_TYPE_NAME\",\n",
+        "    when(col(\"EMPLOYMENT_TYPE_NAME\") == \"Part-time / full-time\", \"Flexible\")\n",
+        "    .when(col(\"EMPLOYMENT_TYPE_NAME\") == \"Part-time (â‰¤ 32 hours)\", \"Parttime\")\n",
+        "    .when(col(\"EMPLOYMENT_TYPE_NAME\") == \"Full-time (> 32 hours)\", \"Fulltime\")\n",
+        "    .when(col(\"EMPLOYMENT_TYPE_NAME\").isNull(), \"Fulltime\")\n",
+        "    .otherwise(col(\"EMPLOYMENT_TYPE_NAME\"))\n",
+        ")\n",
         "subset_final_df.createOrReplaceTempView(\"subset_final_df\")\n",
         "\n",
         "categorical_cols = [\n",
@@ -445,26 +455,6 @@
         "for colname in categorical_cols:\n",
         "    print(f\"\\n---- {colname} ----\")\n",
         "    subset_final_df.select(colname).distinct().show(truncate=False)\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 37,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "subset_final_df = subset_final_df.withColumn(\n",
-        "    \"REMOTE_TYPE_NAME\",\n",
-        "    when(col(\"REMOTE_TYPE_NAME\") == \"Remote\", \"Remote\")\n",
-        "    .when(col(\"REMOTE_TYPE_NAME\") == \"[None]\", \"Undefined\")\n",
-        "    .when(col(\"REMOTE_TYPE_NAME\") == \"Not Remote\", \"On Premise\")\n",
-        "    .when(col(\"REMOTE_TYPE_NAME\") == \"Hybrid Remote\", \"Hybrid\")\n",
-        "    .when(col(\"REMOTE_TYPE_NAME\").isNull(), \"On Premise\")\n",
-        "    .otherwise(col(\"REMOTE_TYPE_NAME\"))\n",
-        ")\n",
-        "\n",
-        "subset_final_df.createOrReplaceTempView(\"subset_final_df\")\n",
         "\n"
       ]
     }
